(library
 (public_name bitarray)
 (libraries base)
 (foreign_stubs
  (language c)
  (names bitarray_stubs)
  (flags :standard -O2 -march=native -Wall -g))
 (foreign_archives bitarray)
 (preprocess
  (pps ppx_jane)))

(rule
 (deps bitarray.ispc)
 (targets bitarray.o bitarray.h)
 (action (run ispc -g --pic -o bitarray.o -h bitarray.h bitarray.ispc)))

(rule
 (deps bitarray.o)
 (targets libbitarray.a)
 (action (run ar -rcs libbitarray.a bitarray.o)))

(rule
 (deps bitarray.o)
 (targets dllbitarray.so)
 (action (run gcc -shared -o dllbitarray.so bitarray.o)))
