(library
 (public_name bitarray)
 (libraries base fmt)
 (foreign_stubs
  (language c)
  (names bitarray_stubs)
  (flags :standard -O2 -Wall))
 (foreign_archives bitarray)
 (preprocess
  (pps ppx_jane)))

(rule
 (targets dllbitarray.so libbitarray.a bitarray.h)
 (deps build.sh bitarray.ispc)
 (action
  (run ./build.sh)))
